fix: align items correct in column rows

--- a/src/main/resources/assets/styles/foundation/_content.scss
+++ b/src/main/resources/assets/styles/foundation/_content.scss
@@ -136,7 +136,7 @@ main {
           flex-direction: row;
           flex-wrap: wrap;
           justify-content: space-between;
-          align-items: baseline;
+          align-items: flex-start;
           row-gap: 40px;
 
           &.reverse {
